--- a/TODO.txt
+++ b/TODO.txt
@@ -2,4 +2,5 @@
 10  why signletone is reconstructed after accessed before WebHost.Build() is called?
 20  clean unneeded asp and npm references
 50  ensure I'm selfhost and why I need OWIN then?
+70  figure out about prerendering with asp-prerenderer (index.cshtml) 
 100 post css for webpack
