--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,4 @@
 Portal
-1   why all goes through json formatter, even version of api
-2   go to plural for controller
-3   align collection with good hal style
 4   fix ts for hal
 5   fix 'flex' in expander
 6   finish servers page
@@ -10,12 +7,12 @@ Portal
 9   gitignore per solution
 10  why signletone is reconstructed after accessed before WebHost.Build() is called?
 20  clean unneeded asp and npm references
+25  separate app / client / controllers parts into projects
 30  rename to Portal
 50  ensure I'm selfhost and why I need OWIN then?
 55  regulate _embedded data for pure HAL without ?fields
 58  web api with pagination
 60  move data to postgres (or MS?)
-70  figure out about prerendering with asp-prerenderer (index.cshtml) 
 100 post css for webpack
 110 how I can use html <map>
 
