--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,10 @@
 Portal
-4   fix ts for hal
-5   fix 'flex' in expander
 6   finish servers page
 7   create something for presentations and simulations
 8   think about API point plugin entry
 9   gitignore per solution
 10  why signletone is reconstructed after accessed before WebHost.Build() is called?
+15  reusable code for ts for hal
 20  clean unneeded asp and npm references
 25  separate app / client / controllers parts into projects
 30  rename to Portal
