--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,13 @@
 Portal
-7   create something for presentations and simulations
-8   think about API point plugin entry
-9   gitignore per solution
-10  why signletone is reconstructed after accessed before WebHost.Build() is called?
+1   allow to click play / stop (servers/server) for own server and post
+2   configure new server and post
+3   simple plugin loader
+14  gitignore per solution
 15  reusable code for ts for hal
+16  home page
+18  think about API point plugin entry
 20  clean unneeded asp and npm references
+21  why signletone is reconstructed after accessed before WebHost.Build() is called?
 25  separate app / client / controllers parts into projects
 27  fix slow opening of server/id page
 30  rename to Portal
