--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,8 @@ Portal
 3   simple plugin loader
 14  gitignore per solution
 15  reusable code for ts for hal
+15.1 disable post server if no simulation selected
+15.2 create new server dynamic loading of related sims and pres for selected simulation
 16  home page
 18  think about API point plugin entry
 20  clean unneeded asp and npm references
@@ -20,5 +22,6 @@ Portal
 70  mobile adaptive ui for server list
 100 post css for webpack
 110 how I can use html <map>
+
 
 Platform
