--- a/TODO.txt
+++ b/TODO.txt
@@ -11,12 +11,12 @@ Portal
 20  clean unneeded asp and npm references
 21  why signletone is reconstructed after accessed before WebHost.Build() is called?
 25  separate app / client / controllers parts into projects
-27  fix slow opening of server/id page
+Done 27  fix slow opening of server/id page. Replaced hrefs with router link to prevent whole page reload 
 30  rename to Portal
 50  ensure I'm selfhost and why I need OWIN then?
 55  regulate _embedded data for pure HAL without ?fields
 56  dynamic embedding of linked resource based on ?fields  
-57  remove mixing of API and Front end hrefs in templates (don't use link from API to redirect)
+Done 57  remove mixing of API and Front end hrefs in templates (don't use link from API to redirect)
 58  web api with pagination
 60  move data to postgres (or MS?)
 70  mobile adaptive ui for server list
