--- a/TODO.txt
+++ b/TODO.txt
@@ -1,27 +1,31 @@
-Portal
+Portal Todo:
 1   allow to click play / stop (servers/server) for own server and post
-2   configure new server and post
 3   simple plugin loader
 14  gitignore per solution
 15  reusable code for ts for hal
 15.1 disable post server if no simulation selected
 15.2 create new server dynamic loading of related sims and pres for selected simulation
 16  home page
-18  think about API point plugin entry
 20  clean unneeded asp and npm references
 21  why signletone is reconstructed after accessed before WebHost.Build() is called?
 25  separate app / client / controllers parts into projects
-Done 27  fix slow opening of server/id page. Replaced hrefs with router link to prevent whole page reload 
 30  rename to Portal
 50  ensure I'm selfhost and why I need OWIN then?
-Done 55  regulate _embedded data for pure HAL without ?fields
 56  dynamic embedding of linked resource based on ?fields  
-Done 57  remove mixing of API and Front end hrefs in templates (don't use link from API to redirect)
 58  web api with pagination
 60  move data to postgres (or MS?)
 70  mobile adaptive ui for server list
 100 post css for webpack
 110 how I can use html <map>
 
+Done:
+Done 2   configure new server and post
+Done 27  fix slow opening of server/id page => Replaced hrefs with router link to prevent whole page reload 
+Done 55  regulate _embedded data for pure HAL without ?fields
+Done 57  remove mixing of API and Front end hrefs in templates (don't use link from API to redirect)
 
-Platform
+
+Platform Todo:
+18  think about API point plugin entry
+
+Done:
