--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
 Portal Todo:
-14  gitignore per solution
 15  reusable code for ts for hal
 15.11 refactor new-simulation with promises 
 15.1 disable post server if no simulation selected
@@ -21,10 +20,11 @@ Portal Todo:
 111 beautiful home page
 
 Done:
-Done 2   configure new server and post
-Done 27  fix slow opening of server/id page => Replaced hrefs with router link to prevent whole page reload 
-Done 55  regulate _embedded data for pure HAL without ?fields
-Done 57  remove mixing of API and Front end hrefs in templates (don't use link from API to redirect)
+2   configure new server and post
+14  gitignore per solution
+27  fix slow opening of server/id page => Replaced hrefs with router link to prevent whole page reload 
+55  regulate _embedded data for pure HAL without ?fields
+57  remove mixing of API and Front end hrefs in templates (don't use link from API to redirect)
 
 
 Platform Todo:
