--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,17 @@
 Portal Todo:
 15.1  dynamic embedding of linked resource based on ?fields  
+15.2 PR to PartialResponse to expose public parsing of ?fields
 15.11 refactor new-simulation with promises 
 15.1 disable post server if no simulation selected
 15.2 create new server dynamic loading of related sims and pres for selected simulation
+15.3 PR to hal-4-angular to extend get() with options
 16  home page
 20  clean unneeded asp and npm references
 21  why signletone is reconstructed after accessed before WebHost.Build() is called?
 25  separate app / client / controllers parts into projects
 30  rename to Portal
 50  ensure I'm selfhost and why I need OWIN then?
+52  why servers are not loaded from first attempt
 57  rename servers into server config, introduce runnable instance of server as separate portal entity
 57.1 allow to click play / stop (servers/server) for own server and post
 58  web api with pagination
