--- a/TODO.txt
+++ b/TODO.txt
@@ -1,23 +1,23 @@
 Portal Todo:
-15.11 refactor new-simulation with promises 
-15.3 PR to hal-4-angular to extend get() with options
+15.3 PR to hal-4-angular to extend get(id) with options
 15.4 PR to hal-4-angular to instantiate all resources in relations tree (_embedded ref. in simulation)
-15.5 Should I use IAsyncResult for collections?
-16  home page
+15.11 refactor new-simulation with promises 
 20  clean unneeded asp and npm references
-20.1 improve POST, take a look into hal-angular POST (set props instead of links)
-20.2 use fields? in POST, pass request builder to creation form
 21  why signletone is reconstructed after accessed before WebHost.Build() is called?
 25  separate app / client / controllers parts into projects
-30  rename to Portal
+58  web api with pagination / curies
+    PR to WebApi.hal for empty collections
+	figure out why embedded resource arrays are not replaced by _links in POST
+57.1 allow to click play / stop (servers/server) for own server and put
+15.5 Should I use IAsyncResult for collections?
 50  ensure I'm selfhost and why I need OWIN then?
+16  home page
+110 how I can use html <map>
 57  rename servers into server config, introduce runnable instance of server as separate portal entity
-57.1 allow to click play / stop (servers/server) for own server and post
-58  web api with pagination
 60  move data to postgres (or MS?)
 70  mobile adaptive ui for server list
 100 post css for webpack
-110 how I can use html <map>
+30  rename to Portal
 
 Done:
 2   configure new server and post
@@ -28,6 +28,8 @@ Done:
 15.2 PR to PartialResponse to expose public parsing of ?fields - not needed anymore, only one method used and it's copy pasted
 15.2 create new server dynamic loading of related sims and pres for selected simulation
 15.25 try to merge getters and queries for model
+20.1 improve POST, take a look into hal-angular POST (set props instead of links)
+20.2 use fields? in POST, pass request builder to creation form - not needed
 18  figure out why server is null after created on form
 27  fix slow opening of server/id page => Replaced hrefs with router link to prevent whole page reload 
 55  regulate _embedded data for pure HAL without ?fields
