--- a/TODO.txt
+++ b/TODO.txt
@@ -1,18 +1,18 @@
 Portal Todo:
 15.4 PR to hal-4-angular to instantiate all resources in relations tree (_embedded ref. in simulation)
-15.11 refactor new-simulation with promises 
+    PR to WebApi.hal for empty collections
 	clean up Post and embedded relations
+	unify relation schema and link templates
+15.11 refactor new-simulation with promises 
+
+    authentication / identity / angular intercept
+	generic error rediret
 
 20  clean unneeded asp and npm references
 25  separate app / client / controllers parts into projects. Host pure angular
 
 58  web api with pagination / curies
-    PR to WebApi.hal for empty collections
-	figure out why embedded resource arrays are not replaced by _links in POST
-
-	authentication / identity / angular intercept
-	generic error rediret
-
+	
 	back end L1 tests 
 	
 21  why signletone is reconstructed after accessed before WebHost.Build() is called?
@@ -50,7 +50,7 @@ Done:
 55  regulate _embedded data for pure HAL without ?fields
 52  why servers are not loaded from first attempt (fixed by Webhal.Api owners)
 57  remove mixing of API and Front end hrefs in templates (don't use link from API to redirect)
-
+    figure out why embedded resource arrays are not replaced by _links in POST. That's ok for now, no more time for HAL
 
 Platform Todo:
 18  think about API point plugin entry
